# TAP-Rewrite

./: .gitignore  Main-NB.ipynb  QUICKSTART.md  Quickstart.docx  README.md  TODO.md  build.bat  demo.docx  experiment.txt  practice.py  pyproject.toml  shock.py  test.py  test2.py  tktest.py  tktest2.py  todo.md  vim_cmd.txt
Experiment components/: Spacebar Test.py
Menu/: experiment.txt  menu.py
TAP.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
data/: 1trial.tap  2trial.tap  newtest.tap  test4.tap
docs/: 5trial.tap  noah-notes  requirements.txt  segfault.txt  test.tap
profiler/: profile_output.txt
src/: daq.py  game.py  main.py  menu.pyw  pyproject.toml  reaction.py  shock.py  speedometer.py  utils.py
src-v0/: main.py
src-v0/components/: shock_selection.py  speedometer.py  tap_test.py
src-v0/menu/: backend.py  (+1 more)
src-v1/: reaction_test.py
src/TAP.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/components/: reaction_test.py  shock_selection.py  spacebar_test_copy.py  test.py
src/game/: backend.py  classes.py  constants.py  daq.py  drawer.py  game.py  main.py  menu.py  menu.pyw  profile_parameters.py  reaction.py  shock.py  speedometer.py  utils.py
src/menu/: backend.py  default.txt  experiment.txt  main.py  menu.py
src/tap/: classes.py  daq.py  main.pyw
src/tap/game/: constants.py  drawer.py  game.py  reaction.py  shock.py
src/tap/menu/: main_menu.py  subject_threshold.py  utils.py
src/tap/tests/: tktest5.py  tktest6.py
src/tests/: test.py  test_copy.py
tap/: classes.py  daq.py  main.pyw
tests/: test.py  tktest3.py  tktest4.py
(+11 files in other folders)
